--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,20 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("_home"), root_path %></li>
-        <li><%= link_to t("_login"), new_user_session_path %></li>
+        <% if user_signed_in? %>
+          <% if can? :manage, :all %>
+	          <li>
+	          <%= link_to t("layout.header.categories"),
+	          admin_categories_path %>
+	          </li>
+	        <% end %> 
+          <li>
+            <%= link_to t("layout.header.logout"), destroy_user_session_path,
+              method: :delete %>
+          </li>
+        <% else %>
+          <li><%= link_to t("layout.header.login"), new_user_session_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
