--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   <body>
     <%= render "layouts/header" %> 
     <div class="container">
+      <div id="messagebox">
+        <% flash.each do |message_type, message| %>
+          <%= content_tag :div, message,
+            class: "alert alert-#{message_type} text-center" %>
+        <% end %>
+      </div>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
