admin crud product

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,15 @@
         <li><%= link_to t("_home"), root_path %></li>
         <% if user_signed_in? %>
           <% if can? :manage, :all %>
-	          <li>
-	          <%= link_to t("layout.header.categories"),
-	          admin_categories_path %>
-	          </li>
-	        <% end %> 
+            <li>
+              <%= link_to t("layout.header.categories"),
+                admin_categories_path %>
+            </li>
+            <li>
+              <%= link_to t("layout.header.products"),
+                admin_products_path %>
+            </li>           
+          <% end %> 
           <li>
             <%= link_to t("layout.header.logout"), destroy_user_session_path,
               method: :delete %>
