--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -4,9 +4,7 @@
   <div class="field">
     <strong><%= t("views.admin.category.form.classify") %>: </strong>
     <%= f.select :parent_id,
-      options_for_select(Category.parent_category.collect {|c| [c.title, c.id]}),
-        class: "form-control" %>
-    </br>
+      options_for_select(@parent), {}, {class: "form-control"} %>
   </div>
   <br>
   <div class="field">
