--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @product], html: {multipart: true} do |f| %>
+<%= simple_form_for [:admin, @product], html: {multipart: true} do |f| %>
   <%= render partial: "shared/error_messages", locals: {object: @product} %>
 
   <span>
