--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,12 +2,12 @@
   <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <% link_to t("_Home"), products_path %>
-        </li>
         <li><%= link_to t("_home"), root_path %></li>
         <% if user_signed_in? %>
           <% if can? :manage, :all %>
+        <li>
+          <%= link_to t("_All_User"), admin_users_path %>
+        </li>
             <li>
               <%= link_to t("layout.header.categories"),
                 admin_categories_path %>
@@ -15,12 +15,24 @@
             <li><%= link_to t("layout.header.products"),
               admin_products_path %></li>
           <% end %> 
-          <li>
-            <%= link_to t("layout.header.logout"), destroy_user_session_path,
-              method: :delete %>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+              <%= current_user.email %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layout.header.profile"), user_path(current_user) %>    
+              <li class="divider"></li>                    
+              <li><%= link_to t("layout.header.editprofile"),
+                edit_user_path(current_user) %>
+              </li>
+              <li class="divider"></li>
+              <li><%= link_to t("layout.header.logout"), destroy_user_session_path,
+                method: :delete %>
+              </li>
+            </ul>
           </li>
         <% else %>
-          <li><%= link_to t("layout.header.login"), new_user_session_path %></li>
+          <li><%= link_to t("layout.header.login"), new_admin_user_path %></li>
         <% end %>
       </ul>
     </nav>
